Updated to FernflowerUI 2.1
Now we support using Internet to download fernflower.jar from GitHub

--- a/FernFlowerUI/FernFlowerUI.vcxproj
+++ b/FernFlowerUI/FernFlowerUI.vcxproj
@@ -32,6 +32,7 @@
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <WindowsAppContainer>false</WindowsAppContainer>
+    <UseOfMfc>false</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -166,7 +167,11 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="FernFlowerUI.ico" />
+    <Image Include="icon1.ico" />
     <Image Include="small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="POINTER.cur" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
