--- a/FernFlowerUI/FernFlowerUI.rc
+++ b/FernFlowerUI/FernFlowerUI.rc
@@ -72,15 +72,24 @@ END
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 170, 62
+IDD_ABOUTBOX DIALOGEX 0, 0, 170, 73
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "关于FernFlowerUI"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            IDI_FERNFLOWERUI,IDC_STATIC,14,14,20,20
+    ICON            IDI_FERNFLOWERUI,IDC_STATIC,14,17,20,20
     LTEXT           "FernFlowerUI版本2.1",IDC_STATIC,42,14,114,8,SS_NOPREFIX
     LTEXT           "Copyright(C) 2017",IDC_STATIC,42,26,114,8
-    DEFPUSHBUTTON   "确定",IDOK,58,41,50,14,WS_GROUP
+    DEFPUSHBUTTON   "确定",IDOK,58,52,50,14,WS_GROUP
+    LTEXT           "现已在GitHub开源",IDC_STATIC,43,39,56,8
+    PUSHBUTTON      "链接",IDC_BUTTON1,99,36,33,14,BS_FLAT
+END
+
+IDD_DIALOGBAR DIALOGEX 0, 0, 330, 16
+STYLE DS_SETFONT | WS_CHILD
+FONT 9, "宋体", 400, 0, 0x0
+BEGIN
+    CONTROL         "",IDC_PROGRESS1,"msctls_progress32",WS_BORDER,0,0,329,14
 END
 
 
@@ -94,10 +103,14 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_ABOUTBOX, DIALOG
     BEGIN
-        LEFTMARGIN, 7
+        LEFTMARGIN, 5
         RIGHTMARGIN, 163
         TOPMARGIN, 7
-        BOTTOMMARGIN, 55
+        BOTTOMMARGIN, 66
+    END
+
+    IDD_DIALOGBAR, DIALOG
+    BEGIN
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -140,7 +153,7 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,0,0
+ FILEVERSION 2,1,0,1
  PRODUCTVERSION 1,0,0,1
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
@@ -156,13 +169,13 @@ BEGIN
     BEGIN
         BLOCK "080404b0"
         BEGIN
-            VALUE "CompanyName", "GUI Maker"
-            VALUE "FileDescription", "FernFlower Decomplier"
-            VALUE "FileVersion", "2.0.0.0"
-            VALUE "InternalName", "FernFlower.exe"
+            VALUE "CompanyName", "6168218c"
+            VALUE "FileDescription", "FernFlower Java Decomplier"
+            VALUE "FileVersion", "2.1.0.1"
+            VALUE "InternalName", "FernFlower Decomplier 2.1"
             VALUE "LegalCopyright", "Copyright (C) 2017"
-            VALUE "OriginalFilename", "FernFlower.exe"
-            VALUE "ProductName", "FernFlower Decomplier"
+            VALUE "OriginalFilename", "FernFlowerUI.exe"
+            VALUE "ProductName", "FernFlower Java Decomplier"
             VALUE "ProductVersion", "1.0.0.1"
         END
     END
