--- a/FernFlowerUI/FernFlowerUI.vcxproj.filters
+++ b/FernFlowerUI/FernFlowerUI.vcxproj.filters
@@ -51,5 +51,13 @@
     <Image Include="FernFlowerUI.ico">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="icon1.ico">
+      <Filter>资源文件</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="POINTER.cur">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
 </Project>
